CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(vBackground)
find_package( OpenCV REQUIRED )
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_VERBOSE_MAKEFILE true)
SET(CMAKE_C_COMPILER "g++")
ADD_COMPILE_OPTIONS (  -g   -Wall -std=c++11 )
SET (CMAKE_EXE_LINKER_FLAGS "-Wl,--gc-sections")
INCLUDE_DIRECTORIES(./ ./flatbuffers ${OpenCV_INCLUDE_DIRS} )
LINK_DIRECTORIES(./lib)
LINK_LIBRARIES(tensorflowlite)
ADD_EXECUTABLE(vBackground ./vBackground.cc)
TARGET_LINK_LIBRARIES(vBackground ${OpenCV_LIBS})